--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smadey/react-native-refreshable",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Custom ScrollView's refresh control",
   "main": "index.js",
   "license": "MIT",
@@ -12,7 +12,7 @@
   },
   "author": {
     "name": "Smadey",
-    "email": "smadey@163.ccom"
+    "email": "smadey@163.com"
   },
   "keywords": [
     "react",
